ChangeLog of simuPOP

BUGS:
  - all known bugs have been cleared.

version 0.8.0 - Not released, available at https://svn.sourceforge.net/svnroot/simupop/trunk

version 0.7.10 - (Rev 987) May 20, 2007
  - BUG: fix a memory leak bug with LoadPopulation
  - BUG: fix a newPopByIndID bug where keepAncestralPops is not respected.
  - NEW: nuclearFamilySampler operator and function
  - NEW: add MATE_UniformDistribution number of offspring type
  - BUG: fix a useAncestralGen bug in largePedigreeSample (Does not affect output).
  - BUG: fix a typo in function SaveLinkage, I really need to test these functions as well.
  - BUG: fix a SWIG option bug that prevents help messages of member functions to display.
  - BUG: fix a memory leak bug with stat operator during allele frequency calculation
  - NEW: make sure alleleFreq[x][0] and alleleFreq[x][1] exist, even if there is no
	    allele 1. This is avoid trouble in  binary form. (maybe not a good idea).
  - NEW: throw an exception when multiple selectors are applied at the same time.
  - NEW: add population::mergePopulation, population::mergePopulationByLoci, 
		MergePopulations, MergePopulationsByLoci, population::resize
  - NEW: add population::insertLoci, population::insertLocus, population::appendLoci, 
		population::appendLocus
  - NEW: add genoStruTrait::locusByName, genoStruTrait::lociByName
  - NEW: swig 1.3.32 compatibility
  - NEW: add scripts/loadHapMap.py
  - NEW: add pyTagger operator, which can be used to trace trait values.
  - NEW: update comments, in preparation for the 0.8.0 release
  - NEW: disallow change of genotypic structure of populations in a simulator.
  - NEW: add simulator::addInfoField, simulator::addInfoFields, simulator::setAncestralDepth
		and related tests and documents.
  - BUG: fix a bug when stat() tries to remove non-existings variables
		caused by population split.


version 0.7.9 - (Rev 885) Apr 3, 2007
  - BUG (build): add solaris support. This OS does not have stdint.h.